--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,6 +2,12 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+@layer components {
+  .errors input {
+    @apply bg-rose-50
+  }
+}
+
 .invalid-feedback {
   color: #a94442;
   display: block;
