More visual polishing

--- a/lib/ridle_web/templates/layout/root.html.heex
+++ b/lib/ridle_web/templates/layout/root.html.heex
@@ -15,15 +15,17 @@
     >
     </script>
   </head>
-  <body class="bg-zinc-200">
-    <div class="container max-w-xl min-w-max mx-auto bg-white">
+  <body class="">
+    <div class="container max-w-lg mx-auto bg-white">
       <header>
         <section class="container">
           <nav></nav>
-          <h1 class="text-2xl uppercase">Ridle</h1>
+          <h1 class="py-4 text-2xl text-center uppercase">Ridle</h1>
         </section>
       </header>
-      <%= @inner_content %>
+      <div class="pb-16">
+        <%= @inner_content %>
+      </div>
     </div>
   </body>
 </html>
