--- a/lib/ridle_web/live/home_live.html.heex
+++ b/lib/ridle_web/live/home_live.html.heex
@@ -1,64 +1,51 @@
-<div class="p-8">
-  <div>
-    <img
-      class="w-full"
-      src="https://www.cars-data.com/webp/thumbs/350px/ford/ford-capri_3604_1.webp"
-      alt="Guess the model, make, and year"
-    />
-  </div>
-
-  <div id="guesses" phx-update="append" class="mt-8 uppercase">
-    <%= for guess <- @guesses do %>
-      <.guess value={guess} solution={@solution} />
-    <% end %>
-  </div>
-
-  <%= if @solved? do %>
-    <span class="text-7xl text-green-700">CORRECT!</span>
-  <% else %>
-    <.form let={f} for={@changeset} phx-submit="guess">
-      <div class="flex gap-x-2 mb-8">
-        <.field form={f} field={:make} placeholder="Make" w="w-5/12" />
-        <.field form={f} field={:model} placeholder="Model" w="w-5/12" />
-        <.field form={f} field={:year} type="number" min="1000" max="3000" placeholder="Year" w="w-2/12 text-right" />
-      </div>
-
-      <button
-        type="submit"
-        class="px-5 py-2 flex inset-0 font-medium bg-green-50 text-green-700 border border-green-600"
-        %
-      >
-        <span class="pr-4">Guess</span>
-        <svg
-          class="w-6 h-6 stroke-green-100 fill-green-700"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 64 64"
-          aria-labelledby="title"
-          aria-describedby="desc"
-          role="img"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-        >
-          <title>Enter Key</title>
-          <desc>Press Enter to submit your guess.</desc>
-          <rect
-            data-name="l"
-            x="2"
-            y="2"
-            width="60"
-            height="60"
-            rx="7.8"
-            ry="7.8"
-            stroke-miterlimit="10"
-            stroke-width="4"
-          >
-          </rect>
-          <path data-name="layer1" stroke-miterlimit="10" stroke-width="4" d="M16 36h30v-12">
-          </path>
-          <path data-name="layer1" stroke-miterlimit="10" stroke-width="4" d="M26 44l-8-8 8-8">
-          </path>
-        </svg>
-      </button>
-    </.form>
-  <% end %>
-  <!-- <pre><%= inspect(@changeset, pretty: true) %></pre> -->
+<div class="bg-zinc-50">
+  <img
+    class="w-full"
+    src="https://upload.wikimedia.org/wikipedia/commons/d/da/Subaru_Justy.JPG?20090406231745"
+    alt="Guess the model, make, and year"
+  />
 </div>
+
+<div id="guesses" phx-update="append" class="mt-4 uppercase">
+  <%= for guess <- @guesses do %>
+    <.guess value={guess} solution={@solution} />
+  <% end %>
+</div>
+
+<%= if @solved? do %>
+  <span class="text-7xl text-green-700">CORRECT!</span>
+<% else %>
+  <.form let={f} for={@changeset} phx-submit="guess">
+    <div class="flex gap-x-2 mb-4">
+      <.field form={f} field={:make} placeholder="Make" w="w-5/12" />
+      <.field form={f} field={:model} placeholder="Model" w="w-5/12" />
+      <.field
+        form={f}
+        field={:year}
+        type="number"
+        min="1000"
+        max="3000"
+        placeholder="Year"
+        w="w-2/12 text-right placeholder:text-left"
+      />
+    </div>
+
+    <button
+      type="submit"
+      class="px-5 py-2 w-full flex justify-center inset-0
+             font-medium bg-zinc-700 text-zinc-50"
+    >
+      <span class="pr-4">Guess</span>
+      <svg
+        class="w-6 h-6 stroke-white fill-white translate-y-px"
+        viewBox="0 0 28 28"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          stroke-width="1%"
+          d="M10.5195 21.5557C11.0908 21.5557 11.4688 21.1689 11.4688 20.624C11.4688 20.3428 11.3545 20.1318 11.1875 19.9561L8.91992 17.75L7.37305 16.4492L9.41211 16.5371H20.3896C22.5869 16.5371 23.5186 15.5439 23.5186 13.3906V8.17871C23.5186 5.98145 22.5869 5.0498 20.3896 5.0498H15.5117C14.9404 5.0498 14.5361 5.48047 14.5361 6.00781C14.5361 6.53516 14.9316 6.96582 15.5117 6.96582H20.3457C21.2422 6.96582 21.6201 7.34375 21.6201 8.23145V13.3291C21.6201 14.2344 21.2334 14.6123 20.3457 14.6123H9.41211L7.37305 14.709L8.91992 13.3994L11.1875 11.1934C11.3545 11.0264 11.4688 10.8154 11.4688 10.5254C11.4688 9.98047 11.0908 9.59375 10.5195 9.59375C10.2822 9.59375 10.0186 9.69922 9.8252 9.89258L4.78027 14.8584C4.57812 15.0518 4.47266 15.3154 4.47266 15.5791C4.47266 15.834 4.57812 16.0977 4.78027 16.291L9.8252 21.2656C10.0186 21.4502 10.2822 21.5557 10.5195 21.5557Z"
+        />
+      </svg>
+    </button>
+  </.form>
+<% end %>
