--- a/lib/ridle_web/templates/layout/root.html.heex
+++ b/lib/ridle_web/templates/layout/root.html.heex
@@ -7,6 +7,7 @@
     <%= csrf_meta_tag() %>
     <%= live_title_tag(assigns[:page_title] || "Ridle", suffix: " · Phoenix Framework") %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")} />
+    <script defer src="https://unpkg.com/alpinejs@3.9.6/dist/cdn.min.js"></script>
     <script
       defer
       phx-track-static
