--- a/lib/ridle_web/templates/layout/root.html.heex
+++ b/lib/ridle_web/templates/layout/root.html.heex
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <%= csrf_meta_tag() %>
-    <%= live_title_tag(assigns[:page_title] || "Ridle", suffix: " · Phoenix Framework") %>
+    <.live_title suffix=" · Ridle">
+      <%= assigns[:page_title] %>
+    </.live_title>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")} />
     <script defer src="https://unpkg.com/alpinejs@3.9.6/dist/cdn.min.js"></script>
     <script
