--- a/lib/ridle_web/templates/layout/root.html.heex
+++ b/lib/ridle_web/templates/layout/root.html.heex
@@ -9,7 +9,8 @@
       <%= assigns[:page_title] %>
     </.live_title>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")} />
-    <script defer src="https://unpkg.com/alpinejs@3.9.6/dist/cdn.min.js"></script>
+    <script defer src="https://unpkg.com/alpinejs@3.9.6/dist/cdn.min.js">
+    </script>
     <script
       defer
       phx-track-static
