--- a/lib/ridle_web/templates/layout/root.html.heex
+++ b/lib/ridle_web/templates/layout/root.html.heex
@@ -20,11 +20,15 @@
     </script>
   </head>
   <body class="">
-    <div class="container max-w-lg mx-auto bg-white">
+    <div class="container mx-auto max-w-lg bg-white">
       <header>
         <section class="container">
           <nav></nav>
-          <h1 class="py-4 text-2xl text-center uppercase">Ridle</h1>
+          <h1 class="py-4 text-center text-2xl uppercase text-gray-800">
+            <span class="border-2 border-gray-400 px-1">Make</span>
+            <span class="border-2 border-gray-400 px-1">Model</span>
+            <span class="border-2 border-gray-400 px-1">Year</span>
+          </h1>
         </section>
       </header>
       <div class="pb-16">
