--- a/lib/ridle_web/live/home_live.html.heex
+++ b/lib/ridle_web/live/home_live.html.heex
@@ -1,7 +1,11 @@
 <div class="space-y-4">
   <nav>
     <ol id="rounds-list" phx-update="stream">
-      <li :for={{dom_id, round} <- @streams.rounds} id={dom_id}><%= round.id %></li>
+      <li :for={{dom_id, round} <- @streams.rounds} id={dom_id}>
+        <.link patch={~p"/#{round.id}"}>
+          <%= round.id %>
+        </.link>
+      </li>
     </ol>
   </nav>
 
