--- a/lib/ridle_web/templates/layout/root.html.heex
+++ b/lib/ridle_web/templates/layout/root.html.heex
@@ -20,7 +20,7 @@
     </script>
   </head>
   <body class="">
-    <div class="container mx-auto max-w-lg bg-white">
+    <div class="font-parking container mx-auto max-w-lg bg-white">
       <header>
         <section class="container">
           <nav></nav>
