Simplify showing current round

--- a/lib/ridle_web/live/home_live.html.heex
+++ b/lib/ridle_web/live/home_live.html.heex
@@ -6,7 +6,7 @@
           patch={~p"/#{number}"}
           class={[
             "px-2 py-1",
-            (number == @round.id && "ring-2 ring-green-500 bg-green-100 text-green-950") ||
+            (number == @round.id && "ring-2 ring-black bg-black text-white") ||
               "bg-gray-200 text-gray-600"
           ]}
         >
