--- a/lib/ridle_web/live/home_live.html.heex
+++ b/lib/ridle_web/live/home_live.html.heex
@@ -20,41 +20,46 @@
     <img class="w-full" src={@round.image_url} alt="Guess the model, make, and year" />
   </div>
 
-  <div id="guesses" phx-stream="prepend">
-    <.simple_form for={@form} id="guess-form" phx-submit="guess" phx-hook="Form" class="space-y-4">
-      <div class="mb-4 flex gap-x-2">
-        <div class="w-5/12">
-          <.field field={@form[:make]} placeholder="Make" />
-        </div>
-        <div class="w-5/12">
-          <.field field={@form[:model]} placeholder="Model" />
-        </div>
-        <div class="w-2/12">
-          <.field
-            field={@form[:year]}
-            type="number"
-            placeholder="Year"
-            class="text-right placeholder:text-left"
-          />
-        </div>
+  <.simple_form
+    for={@form}
+    id="guess-attempt-form"
+    phx-submit="guess"
+    phx-hook="Form"
+    class="space-y-4"
+  >
+    <div class="mb-4 flex gap-x-2">
+      <div class="w-5/12">
+        <.field field={@form[:make]} placeholder="Make" />
       </div>
+      <div class="w-5/12">
+        <.field field={@form[:model]} placeholder="Model" />
+      </div>
+      <div class="w-2/12">
+        <.field
+          field={@form[:year]}
+          type="number"
+          placeholder="Year"
+          class="text-right placeholder:text-left"
+        />
+      </div>
+    </div>
 
-      <button
-        type="submit"
-        class="inset-0 flex w-full justify-center bg-zinc-700 px-5 py-2 font-medium text-zinc-50"
+    <button
+      type="submit"
+      class="inset-0 flex w-full justify-center bg-zinc-700 px-5 py-2 font-medium text-zinc-50"
+    >
+      <span class="pr-1">Guess</span>
+      <svg
+        class="h-6 w-6 translate-y-px fill-white"
+        viewBox="0 0 28 28"
+        xmlns="http://www.w3.org/2000/svg"
       >
-        <span class="pr-1">Guess</span>
-        <svg
-          class="h-6 w-6 translate-y-px fill-white"
-          viewBox="0 0 28 28"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path d="M10.5195 21.5557C11.0908 21.5557 11.4688 21.1689 11.4688 20.624C11.4688 20.3428 11.3545 20.1318 11.1875 19.9561L8.91992 17.75L7.37305 16.4492L9.41211 16.5371H20.3896C22.5869 16.5371 23.5186 15.5439 23.5186 13.3906V8.17871C23.5186 5.98145 22.5869 5.0498 20.3896 5.0498H15.5117C14.9404 5.0498 14.5361 5.48047 14.5361 6.00781C14.5361 6.53516 14.9316 6.96582 15.5117 6.96582H20.3457C21.2422 6.96582 21.6201 7.34375 21.6201 8.23145V13.3291C21.6201 14.2344 21.2334 14.6123 20.3457 14.6123H9.41211L7.37305 14.709L8.91992 13.3994L11.1875 11.1934C11.3545 11.0264 11.4688 10.8154 11.4688 10.5254C11.4688 9.98047 11.0908 9.59375 10.5195 9.59375C10.2822 9.59375 10.0186 9.69922 9.8252 9.89258L4.78027 14.8584C4.57812 15.0518 4.47266 15.3154 4.47266 15.5791C4.47266 15.834 4.57812 16.0977 4.78027 16.291L9.8252 21.2656C10.0186 21.4502 10.2822 21.5557 10.5195 21.5557Z" />
-        </svg>
-      </button>
-    </.simple_form>
-  </div>
-  <%= if false do %>
+        <path d="M10.5195 21.5557C11.0908 21.5557 11.4688 21.1689 11.4688 20.624C11.4688 20.3428 11.3545 20.1318 11.1875 19.9561L8.91992 17.75L7.37305 16.4492L9.41211 16.5371H20.3896C22.5869 16.5371 23.5186 15.5439 23.5186 13.3906V8.17871C23.5186 5.98145 22.5869 5.0498 20.3896 5.0498H15.5117C14.9404 5.0498 14.5361 5.48047 14.5361 6.00781C14.5361 6.53516 14.9316 6.96582 15.5117 6.96582H20.3457C21.2422 6.96582 21.6201 7.34375 21.6201 8.23145V13.3291C21.6201 14.2344 21.2334 14.6123 20.3457 14.6123H9.41211L7.37305 14.709L8.91992 13.3994L11.1875 11.1934C11.3545 11.0264 11.4688 10.8154 11.4688 10.5254C11.4688 9.98047 11.0908 9.59375 10.5195 9.59375C10.2822 9.59375 10.0186 9.69922 9.8252 9.89258L4.78027 14.8584C4.57812 15.0518 4.47266 15.3154 4.47266 15.5791C4.47266 15.834 4.57812 16.0977 4.78027 16.291L9.8252 21.2656C10.0186 21.4502 10.2822 21.5557 10.5195 21.5557Z" />
+      </svg>
+    </button>
+  </.simple_form>
+
+  <%= if @solved? do %>
     <div class="mt-2 flex flex-wrap items-center justify-center text-zinc-900">
       <p class="text-3xl">Correct!</p>
       <svg class="h-10 w-10" viewBox="0 0 28 28" xmlns="http://www.w3.org/2000/svg">
@@ -68,8 +73,8 @@
   <% end %>
 
   <div id="guesses" class="uppercase" phx-update="stream">
-    <%= for {dom_id, guess} <- @streams.guesses do %>
-      <.guess id={dom_id} value={guess} />
+    <%= for {dom_id, outcome} <- @streams.outcomes do %>
+      <.guess id={dom_id} outcome={outcome} />
     <% end %>
   </div>
 </div>
